# flag-badges

./: README.md  flags.py  pyproject.toml
.github/workflows/: generate.yml
src/flag_badges/: __init__.py  api.py  codes.py  generate.py  list.py  main.py
